# sandbox-py

./: .containerignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
container/: Containerfile
src/greetings/: __init__.py  __main__.py  main.py
tests/: test_greetings.py
